<resources>
    <string name="app_name">Chat Room</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="type_a_message">Type a message</string>
    <string name="send">Send</string>
    <string name="chat_room">Chat Room</string>
    <string name="check_your_internet_and_try_again">Check your Internet and try again</string>
    <string name="no_internet_icon">no internet icon</string>
    <string name="join_global_chat">Join Global Chat</string>
    <string name="join_room">Join Room</string>
    <string name="room_name">Room Name</string>
    <string name="create_new_room">Create New Room</string>
    <string name="logout">Logout</string>
    <string name="create_room">Create Room</string>
    <string name="title_activity_room_lobby">RoomLobby</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>