<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Room">

    <Button
            android:text="@string/join_global_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/globalChatButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="222dp"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/joinRoomButton"
            app:layout_constraintHorizontal_bias="0.5"/>
    <Button
            android:text="@string/join_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/joinRoomButton"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/globalChatButton"/>
    <Button
            android:text="@string/create_new_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/createRoomButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/logoutButton"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/joinRoomButton"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/logoutButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="26dp" app:layout_constraintTop_toBottomOf="@+id/createRoomButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>