<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="274dp"
            android:layout_height="200dp"
            android:orientation="vertical" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="216dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="291dp">
        <TextView
                android:id="@+id/title"
                android:layout_height="58dp"
                android:layout_width="match_parent" android:text="@string/create_new_room"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:fontFamily="@font/montserrat" android:alpha="0.7" android:gravity="center"/>

        <EditText
                android:id="@+id/roomname"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:hint="@string/room_name"
                android:layout_marginBottom="20dp"
                android:importantForAutofill="no"/>
        <Button
                android:text="@string/create_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/create_new_room_button"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>