<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="@string/chat_room"
            android:layout_width="211dp"
            android:layout_height="56dp" android:id="@+id/splashScreenText"
            android:textSize="36sp" android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:fontFamily="@font/montserrat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="113dp"/>
    <TextView
            android:text="@string/check_your_internet_and_try_again"
            android:layout_width="339dp"
            android:layout_height="33dp" android:id="@+id/errorMessage"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp" android:fontFamily="@font/montserrat" android:textAllCaps="false"
            android:visibility="visible" android:layout_marginEnd="22dp" android:layout_marginRight="22dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="22dp" android:layout_marginStart="22dp"
            app:layout_constraintHorizontal_bias="0.544"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="232dp"/>
    <ImageView
            android:layout_width="111dp"
            android:layout_height="130dp" app:srcCompat="@drawable/no_internet" android:id="@+id/imageView"
            android:layout_marginTop="62dp"
            app:layout_constraintTop_toBottomOf="@+id/splashScreenText" android:layout_marginBottom="66dp"
            app:layout_constraintBottom_toTopOf="@+id/errorMessage" android:layout_marginEnd="150dp"
            android:layout_marginRight="150dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="150dp"
            android:layout_marginStart="150dp" android:contentDescription="@string/no_internet_icon"/>
</androidx.constraintlayout.widget.ConstraintLayout>